tenzir/integration/data/reference/functions/test_slice/step_08.ref
error: `stride` must be greater 0, but got -1
 --> <input>:5:34
  |
5 |     x = x.slice(0, end=6, stride=-1)
  |                                  ^^ 
  |